hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_inherits_from_traits.php.exp
File "abstract_inherits_from_traits.php", line 9, characters 38-40:
Member $p has the wrong type (Typing[4341])
File "abstract_inherits_from_traits.php", line 9, characters 38-40:
Typing error
File "abstract_inherits_from_traits.php", line 5, characters 38-40:
Expected int
File "abstract_inherits_from_traits.php", line 9, characters 38-40:
But got num
